@@ -20,5 +20,18 @@
 function(libpath)
     library.dynam.unload("tools", libpath)
 
+## These are created at install time.
+library.dynam("tools", "tools", .Library)
+SIGINT <- .Call("ps_sigs", 2L, PACKAGE = "tools")
+SIGQUIT <- .Call("ps_sigs", 3L, PACKAGE = "tools")
+SIGKILL <- .Call("ps_sigs", 9L, PACKAGE = "tools")
+SIGTERM <- .Call("ps_sigs", 15L, PACKAGE = "tools")
+SIGSTOP <- .Call("ps_sigs", 17L, PACKAGE = "tools")
+SIGCHLD <- .Call("ps_sigs", 20L, PACKAGE = "tools")
+SIGUSR1 <- .Call("ps_sigs", 30L, PACKAGE = "tools")
+SIGUSR2 <- .Call("ps_sigs", 31L, PACKAGE = "tools")
+
+
+
 latexArgCount <- integer(0)              # The next line modifies this
 latexTable <- makeLatexTable(utf8table)  # FIXME: Should latexTable be hardcoded instead?
